# Ryzanstein

./: .gitignore  DISTRIBUTED_ARCHITECTURE.md  INTEGRATION_PHASE_EXECUTION_SUMMARY.md  MASTER_SCRIPTS_AUTOMATION_GUIDE.md  MASTER_SCRIPTS_FINAL_SUMMARY.md  MISSION_STATUS_REPORT.txt  NEXT_STEPS_MASTER_ACTION_PLAN.md  PHASE3_DIAGNOSTIC_REPORT.json  PHASE_3_DAY1_STATUS.md  PHASE_3_TEAM_REVIEW_COMPLETION.md  README.md  RYZANSTEIN_STATUS_REPORT_SPRINT4.md  RYZEN-LLM_Project_Proposal.docx  SETUP_COMPLETE_ECOSYSTEM_MASTER.ps1  SPRINT5_DESKTOP_EXTENSION_FOUNDATION.md  SPRINT5_QUICK_REFERENCE.md  SPRINT6_KICKOFF_CHECKLIST.md  SPRINT_1.1_EXECUTION_PLAN.md  SPRINT_2.2_INTEGRATION_DAY2.md  SPRINT_2_2_DAYS_5_9_DELIVERY.md  SPRINT_4_3_DELIVERY_SUMMARY.md  SPRINT_4_4_KICKOFF.md  WEEK_1_ARCHITECTURE_COMPLETE.md  v2.0_COMPLETION_AND_PHASE3_KICKOFF.md
.continue/: INTEGRATION_GUIDE.md  SPRINT5_COMPLETION_SUMMARY.md  config.ts
.github/workflows/: ci.yml  extension-build.yml
.history/: ARCHITECTURE_20251214113056.md  ARCHITECTURE_ASSESSMENT_PHASE3_20251220114340.md  ARCHITECTURE_REVIEW_EXECUTIVE_SUMMARY_20251220114537.md  ARCHITECTURE_VISUAL_SUMMARY_20251220114624.md  BENCHMARK_DELIVERABLES_INDEX_20251214111620.md  COMMUNICATION_GUIDELINES_20251220112657.md  COMPREHENSIVE_EXECUTIVE_SUMMARY_AND_ACTION_PLAN_20251220215910.md  CRITICAL_ADRS_SPRINT1_20251220114414.md  DECISION_LOG_TEMPLATE_20251220112558.md  DEPLOYMENT_CHECKLIST_20251214113139.md  DISTRIBUTED_ARCHITECTURE_20251220111618.md  DISTRIBUTED_INFERENCE_GUIDE_20251220181041.md  DOCUMENTATION_COMPLETION_REPORT_20251214113341.md  DOCUMENTATION_GENERATION_SUMMARY_20251214113248.md  DOCUMENTATION_INDEX_20251214113212.md  DOCUMENTATION_MAP_20251214113313.md  FINAL_RELEASE_REPORT_v2.0_20251220093504.md  GITHUB_ISSUES_MANIFEST_SPRINT1_20251220115259.md  GITHUB_PROJECTS_PHASE3_SETUP_20251220115046.md  GITHUB_PROJECTS_PHASE3_SETUP_SUMMARY_20251220115334.md  GITHUB_PROJECTS_SETUP_20251220110916.md  GITHUB_PROJECTS_SPRINT1_VERIFICATION_20251220111010.md  IMPLEMENTATION_SUMMARY_20251210174007.md  INTEGRATION_GUIDE_20251214112938.md  INTEGRATION_TESTING_PROGRESS_20251214073605.md  KV_CACHE_OPTIMIZATION_COMPLETE_20251220195230.md  MASTER_ACTION_PLAN_20251210102127.md  MISSION_COMPLETE_SUMMARY_20251214111502.md  NEXT_PHASE_COMPLETE_20251214113732.md  OPTIMIZATION_BUILD_SUCCESS_20251214061129.md  PERFORMANCE_ANALYSIS_TECHNICAL_20251214111343.md  PERFORMANCE_REPORT_20251214113009.md  PHASE3_ARCHITECTURE_REVIEW_COMPLETE_20251220114712.md  PHASE3_CRITICAL_PATH_ANALYSIS_20251220115143.md  PHASE_3_ARCHITECTURE_DESIGN_20251220094036.md  PHASE_3_COORDINATION_DOCUMENTATION_INDEX_20251220112807.md  PHASE_3_COORDINATION_FRAMEWORK_SUMMARY_20251220112933.md  PHASE_3_EXECUTION_COORDINATION_PACKAGE_20251220112731.md  PHASE_3_EXECUTION_KICKOFF_SUMMARY_20251220115928.md  PHASE_3_FEATURE_ROADMAP_20251220094132.md  (+52 more)
.history/RYZEN-LLM/: BUILD_COMPLETION_REPORT_20251211060243.md  BUILD_INTEGRATION_COMPLETE_20251214035700.md  BUILD_README_20251211060420.md  CMakeLists_20251210152354.txt  CMakeLists_20251210152526.txt  CMakeLists_20251210192049.txt  CMakeLists_20251210193719.txt  CMakeLists_20251210210427.txt  CMakeLists_20251214060403.txt  CMakeLists_20251214063754.txt  CMakeLists_20251220083317.txt  CMakeLists_20251220084307.txt  CMakeLists_20251221023235.txt  CMakeLists_20251221044527.txt  COMPLETE_INDEX_20251211064745.md  DOCUMENTATION_INDEX_20251210181229.md  EXECUTION_CHECKLIST_20251211064519.md  EXECUTION_CONTEXT_20251210181151.md  FINAL_STATUS_20251211064551.md  FINAL_SUMMARY_20251211064229.md  IMPLEMENTATION_FIXES_REQUIRED_20251210181021.md  KV_CACHE_IMPLEMENTATION_SUMMARY_20251214055555.md  KV_CACHE_MASTER_DELIVERABLES_20251214055825.md  KV_CACHE_QUICK_REFERENCE_20251214055704.md  MASTER_EXECUTION_PLAN_20251210194221.md  MASTER_EXECUTION_PLAN_20251210195313.md  MASTER_EXECUTION_PLAN_20251210203256.md  MASTER_EXECUTION_PLAN_20251211060307.md  PHASE2_COMPREHENSIVE_PERFORMANCE_REPORT_20251220082911.md  PHASE2_COMPREHENSIVE_PERFORMANCE_REPORT_20251220083025.md  PHASE2_FINAL_SUMMARY_20251220081337.md  PHASE2_FINAL_SUMMARY_20251220081457.md  PHASE2_INTEGRATION_TEST_REPORT_20251220081114.md  (+100 more)
RYZEN-LLM/: .gitignore  BLOCKERS_STATUS.txt  CMakeLists.txt  pyproject.toml  test_extension_load.py
RYZEN-LLM/.github/workflows/: ci.yml
RYZEN-LLM/scripts/: download_models.py  task_5_real_weight_testing.py  verify_phase1.py
RYZEN-LLM/src/api/: __init__.py  distributed_server.py  interfaces.py  request_router.py  server.py  types.py
RYZEN-LLM/src/api/bindings/: CMakeLists.txt  bitnet_bindings.cpp
RYZEN-LLM/src/core/: CMakeLists.txt  benchmarking.py  production_hardening.py  security.py  weight_loader.py
RYZEN-LLM/src/core/bitnet/: CMakeLists.txt  bitnet_layer.cpp  engine.cpp  quantize.cpp  quantize.h
RYZEN-LLM/src/core/bitnet/kernels/: matmul.cpp
RYZEN-LLM/src/core/engine/: distributed_inference.py
RYZEN-LLM/src/core/mamba/: scan.cpp  ssm.cpp
RYZEN-LLM/src/core/rwkv/: CMakeLists.txt  channel_mixing.cpp  time_mixing.cpp  wkv.cpp
RYZEN-LLM/src/core/tmac/: CMakeLists.txt  lut_gemm.cpp  lut_gemm.h  lut_lookup.h  tmac_gemm.cpp  tmac_gemm_optimized.cpp
RYZEN-LLM/src/distributed/: model_loader.py  multi_gpu_orchestrator.py  sharded_kv_cache.py
RYZEN-LLM/src/inference/: cache_compression.py  distributed_kv_cache.py  dynamic_allocator.py
RYZEN-LLM/src/monitoring/: metrics.py
RYZEN-LLM/src/optimization/: CMakeLists.txt
RYZEN-LLM/src/optimization/avx512/: activation.cpp  matmul.cpp  matmul.h  vnni.cpp
RYZEN-LLM/src/optimization/memory/: kv_cache.cpp  pool.cpp
RYZEN-LLM/src/optimization/speculative/: draft_model.cpp  speculative_decoder.cpp  verifier.cpp  verifier.h
RYZEN-LLM/src/serving/: batch_engine.py
RYZEN-LLM/storage/weights/models--1bitLLM--bitnet_b1_58-3B/refs/: main
RYZEN-LLM/tests/: test_distributed_api.py  test_distributed_orchestrator.py  test_production_hardening.py
desktop/: SETUP_DESKTOP_APP_MASTER.ps1  go.mod  wails.json
tests/: test_days_5_9_cache.py
vscode-extension/: SETUP_VSCODE_EXTENSION_MASTER.ps1  package.json
(+848 files in other folders)
